include http port to product catalog

--- a/product-catalog/src/main/resources/application.conf
+++ b/product-catalog/src/main/resources/application.conf
@@ -1,8 +1,8 @@
 app {
   database {
     address {
-      url = "jdbc:h2:~/products;DATABASE_TO_LOWER=TRUE;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:sql/db.sql'"
-      url = ${?REF_ARCH_URL_DB}
+      url = "jdbc:h2:mem:products;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:sql/bd.sql'"
+      url = ${?PRODUCTS_URL_DB}
     }
     driver {
       className = "org.h2.Driver"
@@ -10,16 +10,27 @@ app {
     user {
       userName {
         value = "user"
-        value = ${?REF_ARCH_USER_NAME}
+        value = ${?PRODUCTS_NAME}
       }
       password {
         plainText = "password"
-        plainText = ${?REF_ARCH_PASSWORD}
+        plainText = ${?PRODUCTS_PASSWORD}
       }
     }
     connections {
       poolSize = 10
-      poolSize = ${?REF_ARCH_DB_POOL_SIZE}
+      poolSize = ${?PRODUCTS_DB_POOL_SIZE}
     }
+  }
+  http {
+    host {
+      ip = "0.0.0.0"
+      ip = ${?PRODUCTS_HTTP_HOST}
+    }
+    port {
+      number = "8085"
+      number = ${?PRODUCTS_HTTP_PORT}
+    }
+    timeout = 5s
   }
 }
