add http services

--- a/swop-cart/src/main/resources/application.conf
+++ b/swop-cart/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 app {
   database {
     address {
-      url = "jdbc:h2:~/products;DATABASE_TO_LOWER=TRUE;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:sql/db.sql'"
+      url = "jdbc:h2:~/cartV4;DATABASE_TO_LOWER=TRUE;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:sql/cart.sql'"
       url = ${?REF_ARCH_URL_DB}
     }
     driver {
@@ -21,5 +21,17 @@ app {
       poolSize = 10
       poolSize = ${?REF_ARCH_DB_POOL_SIZE}
     }
+  }
+
+  http {
+    host {
+      ip = "0.0.0.0"
+      ip = ${?PRODUCTS_HTTP_HOST}
+    }
+    port {
+      number = "8086"
+      number = ${?PRODUCTS_HTTP_PORT}
+    }
+    timeout = 5s
   }
 }
