--- a/swop-cart/src/main/resources/application.conf
+++ b/swop-cart/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 app {
   database {
     address {
-      url = "jdbc:h2:~/cart_shop;DATABASE_TO_LOWER=TRUE;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:sql/cart.sql'"
+      url = "jdbc:h2:~/cart_shopV1;DATABASE_TO_LOWER=TRUE;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:sql/cart.sql'"
       url = ${?REF_ARCH_URL_DB}
     }
     driver {
