--- a/users/src/main/resources/application.conf
+++ b/users/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 app {
   database {
     address {
-      url = "jdbc:h2:mem:users;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:sql/bd.sql'"
+      url = "jdbc:h2:mem:~/users;DB_CLOSE_ON_EXIT=false;AUTO_RECONNECT=TRUE;INIT=RUNSCRIPT FROM 'classpath:sql/bd.sql'"
       url = ${?USERS_URL_DB}
     }
     driver {
