--- a/product-catalog/app/http-deployment.yml
+++ b/product-catalog/app/http-deployment.yml
@@ -17,15 +17,13 @@ spec:
       imagePullSecrets:
         - name: gitlab-registry
 ---
-apiVersion: v1
-kind: Service
-metadata:
-  name: product-catalog-http-svc
-spec:
-  type: NodePort
-  selector:
-    app: product-catalog-http
-  ports:
-  - protocol: TCP
-    port: 8085
-      
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: product-catalog-http-svc
+#spec:
+#  selector:
+#    app: product-catalog-http
+#  ports:
+#  - protocol: TCP
+#    port: 8085
